--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,12 @@
         </activity>
         <activity
             android:name=".LyricsCreateActivity">
-
         </activity>
+        <activity
+            android:name=".LyricsListActivity">
+        </activity>
+
+
     </application>
 
 </manifest>
