--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -24,19 +24,32 @@
         </activity>
         <activity
             android:name=".LyricsCreateActivity"
+            android:label="Create Lyric"
             android:parentActivityName=".MainActivity">
+
         </activity>
         <activity
             android:name=".LyricsListActivity"
+            android:label="Lyrics List"
             android:parentActivityName=".MainActivity">
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"
+                android:value=".LyricsListActivity" />
         </activity>
         <activity
             android:name=".AboutActivity"
+            android:label="About"
             android:parentActivityName=".MainActivity">
         </activity>
-        <meta-data android:name="android.app.searchable"
-            android:resource="@xml/searchable"
-            android:value=".activities.SearchResultActivity" />
+        <activity
+            android:name=".DeleteActivity"
+            android:label="Delete Project"
+            android:parentActivityName=".MainActivity">
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"
+                android:value=".DeleteActivity" />
+        </activity>
+
 
 
     </application>
